...
    
    private func proceedToNextQuestionOrResults() {
        if self.isLastQuestion() {
            let text = makeResultsMessage()
            
            let viewModel = QuizResultsViewModel(
                title: "Этот раунд окончен!",
                text: text,
                buttonText: "Сыграть ещё раз")
            viewController?.show(quizResult: viewModel)
        } else {
            self.switchToNextQuestion()
            questionFactory?.requestNextQuestion()
...
